[package]
name = "clj-vindent-emacs-module"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies] 
clj-vindent-engine = {path = "../clj-vindent-engine"}
emacs = "0.21.0"
tracing-subscriber = { version = "0.3", features = ["json"] }
