[package]
name = "cljvindent-cli"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true

[[bin]]
name = "cljvindent"
path = "src/main.rs"

[dependencies]
cljvindent-core = "0.1.3"
clap = { version = "4.6", features = ["derive"] }
tracing = {version = "0.1.44", features = ["attributes"]}
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-appender = "0.2"
