[package]
name = "cljvindent-core"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
readme = "README.md"
description = "Clojure(script), EDN indentation and alignment library"
keywords = ["clojure", "indentation", "alignment"]

[dependencies]
tree-sitter = "0.25"
clap = { version = "4.6", features = ["derive"] }
tree-sitter-clojure = "0.1.0"
rayon = "1.11"
rstest = "0.26.1"
tracing = {version = "0.1.44", features = ["attributes"]}

[dev-dependencies]
pretty_assertions = "1"
